# scalable-rag-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.ingestion  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-ingestion.txt  sample_questions.txt
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml
deploy/ingress/: nginx.yaml
deploy/karpenter/: nodepool.yaml
deploy/ray/: ray-cluster.yaml  ray-serve-embed.yaml  ray-serve-llm.yaml
deploy/secrets/: external-secrets-azure.yaml  external-secrets.yaml
docs/: ROADMAP.md  api-reference.md  architecture.md  aws_deployment_plan.md  deployment-aws.md  deployment-azure.md  operations.md  request_flow.md  scaling.md  security.md
infra/karpenter/: provisioner-cpu.yaml  provisioner-gpu.yaml
infra/terraform/: budgets.tf  eks.tf  iam.tf  karpenter.tf  main.tf  rds.tf  redis.tf  s3.tf  terraform.tfvars.example  vpc.tf
pipelines/ingestion/: main.py  requirements.txt
pipelines/jobs/: s3_event_handler.py
scripts/: bootstrap_cluster.sh  bootstrap_cluster_azure.sh  build_push.sh  cleanup.sh  cleanup_azure.sh  debug_pipeline.py  deploy_aws.sh  deploy_azure.sh  generate_diagram.py  ingest_local.py  ingest_openai.py  init_cloud.py  init_db.py  init_local.py  init_neo4j.py  init_qdrant.py  migrate_add_tenant_id.py  migrate_add_user_memories.py  post_deploy_verify.sh  seed_dataset.py  seed_olist.py  shutdown.sh  smoke_test.sh  verify-cleanup-azure.sh  verify-cleanup.sh
services/api/: .dockerignore  Dockerfile  main.py  (+1 more)
(+171 files in other folders)
