[project]
name = "scalable-rag-pipeline"
version = "1.0.0"
requires-python = ">=3.10"
description = "Enterprise-grade RAG pipeline with multi-cloud support (AWS + Azure)"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["services/api/app", "pipelines"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "pipelines"]

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
